# avo_ibo

./: .gitignore  AGENTS.md  AVOGADRO2_PLUGIN_TUTORIAL.md  Avogadro_Plugin-Spec.md  CITATION.cff  CONTINUITY.md  CRITICAL_REVIEW.md  LICENSE  MATHEMATICS.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  TUTORIAL.md  _last_output.json  _md2typ.py  cjson.scheme  log.txt  mathematics.md  mathematics.typ  plugin_spec.md  pyproject.toml  tutorial.md
calcs/: config.json
examples/: README.md  SO3.xyz  benzene.xyz  methane.xyz  methylamine.xyz
mathematics/: _md2typ.py  mathematics.md  mathematics.typ
paper/: README.md
src/avogadro_ibo/: __init__.py  __main__.py  calcs.py  config.py  links.py  test_plugins.py
tests/: test_cli.py
tests/files/: ammonia.xyz  diborane.xyz  ethene.xyz  water.xyz  zncl2.xyz
