[project]
authors = [{ name = "Billy Wayne McCann", email = "thebillywayne@gmail.com" }]
dependencies = []
name = "avogadro_ibo"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
avogadro-ibo = "avogadro_ibo:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
psi4 = ">=1.10.2,<2"

[tool.pixi.pypi-dependencies]
avogadro_ibo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.menu-commands]]
identifier = "ibo"
input-format = "xyz"
input-cjson = true
menu = "Extensions"
submenu = "Intrinsic Bond Orbitals"
item = "Compute IBOs"
menu-priorities = [100, 800]
